# sync-google-photo

./: .gitignore  Cargo.toml
file-picker/: Cargo.toml
file-picker/src/: lib.rs
src/: album.rs  api.rs  args.rs  client.rs  config.rs  item.rs  main.rs
