[package]
name = "sync-google-photo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yup-oauth2 = "6.2"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dialoguer = "0.10"
futures = "0.3"
tempfile = "3.3"
