[package]
name = "sync-google-photo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
file-picker = { path = "file-picker" }
yup-oauth2 = "6.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dialoguer = "0.10"
futures = "0.3"
directories = "4.0"
clap = { version = "3.1", features = ["derive"] }
async_once = "0.2"
lazy_static = "1.4"

[workspace]
members = ["file-picker"]
